Phrases in between ladder steps no longer have any text wrapping
This mirrors how raddle.quest handles long phrases.

--- a/src/app/raddle/raddle-ladder/raddle-ladder.scss
+++ b/src/app/raddle/raddle-ladder/raddle-ladder.scss
@@ -100,6 +100,7 @@
       border: 1px solid var(--mat-sys-outline);
       padding: 0 0.2rem;
       border-radius: var(--mat-sys-corner-extra-small);
+      text-wrap: nowrap;
 
       position: absolute;
       left: 50%;
